tests/ui/did_you_mean/replace-impl-infer-ty-from-trait.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for functions
  --> $DIR/replace-impl-infer-ty-from-trait.rs:9:15
   |
LL |     fn bar(i: _, t: _, s: _) -> _ {
   |               ^     ^     ^     ^ not allowed in type signatures
   |               |     |     |
   |               |     |     not allowed in type signatures
   |               |     not allowed in type signatures
   |               not allowed in type signatures
   |
help: try replacing `_` with the types in the corresponding trait method signature
   |
LL |     fn bar(i: i32, t: usize, s: &()) -> (usize, i32) {
   |               ~~~     ~~~~~     ~~~     ~~~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0121`.
